--- a/Notebook5.ipynb
+++ b/Notebook5.ipynb
@@ -695,10 +695,10 @@
         "from sklearn.preprocessing import StandardScaler\n",
         "scaler = StandardScaler()\n",
         "scaler.fit(train_data)\n",
-        "train_data = scaler.transform(train_data)\n",
-        "test_data = scaler.transform(test_data)\n",
+        "train_data_normalized = scaler.transform(train_data)\n",
+        "test_data_normalized = scaler.transform(test_data)\n",
         "\n",
-        "#now you can use train_data, test_data, train_sln, and test_sln"
+        "#now you can use train_data_normalized, test_data_normalized, train_sln, and test_sln"
       ],
       "execution_count": 5,
       "outputs": []
